@@ -26,6 +26,7 @@ LEGEND
   [-] In very rare cases renaming, moving and copying of nested groups not working correctly
   [-] Removing of avatars in several selected accounts or contacts was not working
   [-] The application may fail on removing from history active conversation
+  [-] Fixed problems with editing of a priority of the status in the edit status dialog
 
 
 v1.2.0
